tests/rosetta/transpiler/Scala/convert-decimal-number-to-rational.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/convert-decimal-number-to-rational.scala:67: error: type mismatch;
 found   : Double
 required: scala.math.BigInt
            intPart = (intPart * BigInt(10) + d).asInstanceOf[BigInt]
                                              ^
/workspace/mochi/tests/rosetta/transpiler/Scala/convert-decimal-number-to-rational.scala:69: error: type mismatch;
 found   : Double
 required: scala.math.BigInt
            fracPart = (fracPart * BigInt(10) + d).asInstanceOf[BigInt]
                                                ^
two errors found
